# 2025.1-T01-LFBagYourDreams

./: .gitignore  README.md  backend.DockerFile  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pytest.yml
backend/: .coverage  .env  .pylintrc  README.md  backend.DockerFile  db.sqlite3  manage.py  pytest.ini  requirements.txt
backend/app/: admin.py  api_urls.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_alter_carrinho_options_alter_cor_options_and_more.py  0002_alter_carrinho_table_alter_cor_table_and_more.py  0002_alter_pedido_options.py  0003_produtoimagem.py
backend/app/services/: mercadopago_service.py
backend/app/templates/: create_payment.html  payment_error.html  payment_failure.html  payment_status.html  payment_success.html  pending_payment.html
backend/app/tests/: conftest.py
backend/app/utils/: supabase_utils.py
backend/config/: settings.py  urls.py
backend/project_lfb/: settings.py
backend/tests/: conftest.py
backend/tests/serializers/: test_product_list_serializer.py
backend/tests/test_models/: test_cart.py  test_color.py  test_customization.py  test_product.py  test_product_cart.py
backend/tests/test_serializers/: test_product_detail_serializer.py
front-end/: index.html  package-lock.json  package.json  tsconfig.app.json
front-end/src/: App.tsx  api.ts  index.css  main.tsx
front-end/src/__mocks__/: datamockadapedidos.tsx  datamockadaprodutos.tsx
front-end/src/components/: AdminProtectedRoute.tsx  Alertas.tsx  Button.tsx  Carrinho.tsx  CartContext.tsx  Footer.tsx  InputText.tsx  Navbar.tsx  ProdutoCard.tsx  Selector.tsx  TabelaPedidos.tsx  TabelaProdutos.tsx
front-end/src/pages/: AdicionarProdutoPage.tsx  AdminPage.tsx  CatalogoPage.tsx  CheckoutPage.tsx  DetalhePedidoPage.tsx  DetalheProdutoPage.tsx  HomePage.tsx  PedidosPage.tsx  ProdutosPage.tsx  (+2 more)
frontend/src/: index.css
(+25 files in other folders)
