[project]
name = "2025-1-t01-lfbagyourdreams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "environ>=1.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]
